--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,10 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 }
 
+application {
+    mainClassName = 'edu.ib.Main'
+}
+
+run {
+    standardInput = System.in
+}
